--- a/src/OH.DI.Core/OH.DI.Issuer.Core.csproj
+++ b/src/OH.DI.Core/OH.DI.Issuer.Core.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\OH.DI.SharedKernel\OH.DI.Issuer.SharedKernel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CredentialAggregate\" />
+  </ItemGroup>
+
 </Project>
