--- a/src/OH.DI.Web/OH.DI.Issuer.Web.csproj
+++ b/src/OH.DI.Web/OH.DI.Issuer.Web.csproj
@@ -12,6 +12,12 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <None Remove="database.sqlite" />
+    <None Remove="database.sqlite-shm" />
+    <None Remove="database.sqlite-wal" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <PackageReference Include="Ardalis.ApiEndpoints" Version="4.0.1" />
     <PackageReference Include="Ardalis.ListStartupServices" Version="1.1.3" />
     <PackageReference Include="Ardalis.Result" Version="3.1.2" />
