update nuget config

--- a/nuget.config
+++ b/nuget.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageRestore>
         <add key="enabled" value="True" />
@@ -14,7 +14,7 @@
     </bindingRedirects>
 
     <packageManagement>
-        <add key="format" value="0" />
+        <add key="format" value="1" />
         <add key="disabled" value="False" />
     </packageManagement>
 </configuration>
