--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -18,6 +18,6 @@ jobs:
       with:
         dotnet-version: '6.0.x'
     - name: Build with dotnet
-      run: dotnet build --configuration Release
+      run: dotnet build --configuration Debug
     - name: Test with dotnet
-      run: dotnet test ./OH.DI.Issuer.sln --configuration Release
+      run: dotnet test ./OH.DI.Issuer.sln --configuration Debug
